fixed spacing in select config datatable

--- a/src/components/DataTableRender/DataTableRender.scss
+++ b/src/components/DataTableRender/DataTableRender.scss
@@ -1,8 +1,13 @@
 @import "../../styles/variables";
-
-.break-line {
-  display: block;
-  width: 100%; /*or whatever width you want the effect of <hr>*/
-  border-top: 1px solid $epa-gray;
+#datatableContainer{
+  .break-line {
+    display: block;
+    width: 100%; /*or whatever width you want the effect of <hr>*/
+    border-top: 1px solid $epa-gray;
+  }
+  .rdt_TableCell{
+    justify-content: start !important;
+  }
 }
+
 
